# family-finance-os

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT.md  CODEX.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  cursor.md  docker-compose.yml  pyproject.toml
.cursor/rules/: 00-agent-bootstrap.mdc  security-boundaries.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
docs/: data_handling_policy.md  localization.md  owner_smoke_checklist_v1.md  product_requirements.md  qa_feature_requirements.md  qa_validation_strategy.md
planning/: architecture_decisions_v1.md  clarifying_questions.md  controlled_decision_event_model_v1.md  data_model_audit_design_v1.md  elevated_mode_v040.md  first_closed_loop_slice_v1.md  import_validation_contract_v1.md  initial_product_plan.md  issue_55_view_as_decision_record.md  owner_decision_record.md  permission_matrix_data_scopes_v040.md  post_v030_permissions_elevation_approvals.md  prior_work_audit.md  repo_setup_summary.md  report_examples_v1.md  report_monthly_close_artifacts_v1.md  semi_persistent_qa_environment.md  settings_config_audit_design_v1.md  suggestions_approval_model_v040.md  test_validation_strategy_v1.md  ui_mockup_review_checklist_v1.md  ui_mockups_v1.md  ui_mockups_v1_1_funds_dashboard.md  v040_orchestration_master_qa_plan.md  v1_1_decision_rollup.md  v1_1_expansion_decision_record.md  v1_completion_audit.md  v1_implementation_plan.md  v1_rc_foundation_review_guide.md  v1_synthetic_qa_record.md
scripts/: check_secret_patterns.py  check_sensitive_artifacts.py  check_v1_security_contract.py  generate_synthetic_import_pack.py  install_qa_runner.sh  migrate_data_root.py  qa_deploy.sh  qa_reset.py  qa_seed.py  run_docker_e2e.py
(+180 files in other folders)
