[project]
name = "dillon-finances"
version = "0.3.0"
description = "Local-first family financial operating system"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Mason Dillon" }]
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api"]

[tool.setuptools.package-data]
dillon_finances = ["static/*", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests/api", "tests/scripts"]
pythonpath = ["apps/api", "."]
addopts = "-q"
