[project]
name = "family-finance-os"
version = "0.5.0"
description = "Local-first family financial operating system"
license = { text = "MPL-2.0" }
authors = [{ name = "Mason Dillon" }]
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=9.0.3,<10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api"]

[tool.setuptools.package-data]
family_finance_os = ["static/*", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests/api", "tests/scripts"]
pythonpath = ["apps/api", "."]
addopts = "-q"
